@@ -1,3 +1,15 @@
+2005-08-04  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclObj.c:	Simplified routines that manage the typeTable.
+	Deleted the UpdateStringOfBoolean() routine, that can never be called.
+
+2005-08-03  Don Porter  <dgp@users.sourceforge.net>
+
+        * generic/tclCompExpr.c:        Untangled some dependencies in the
+        * generic/tclEvent.c:           order of finalization routines.
+        * generic/tclInt.h:             [Bug 1251399]
+        * generic/tclObj.c:
+
 2005-07-30  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tclLoadDyld.c (TclpDlopen, TclpLoadMemory): workarounds
